--- a/index.html
+++ b/index.html
@@ -134,7 +134,6 @@
             <ul>
                 <li><a href="#">Trending Topic 1</a></li>
                 <li><a href="#">Climate Change Summit Results</a></li>
-                <li><a href="#">Economic Recovery Updates</a></li>
                 <li><a href="#">Technology Innovation Awards</a></li>
                 <li><a href="#">Sports Championship Finals</a></li>
                 <li><a href="#">Cultural Events Calendar</a></li>
@@ -167,10 +166,10 @@
         <div class="footer-social">
             <h3>Follow Us</h3>
             <div class="social-icons">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://www.facebook.com/mohammed.alhanjouri" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://x.com/MohammedHanj" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.instagram.com/mohammed.alhanjouri" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/mohammed-alhanjouri" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
             </div>
         </div>
     </footer>
