Updates on HTML Pages

--- a/article.html
+++ b/article.html
@@ -46,29 +46,13 @@
         </div>
     </header>
 
-    <!-- <div class="layout-container">
-        <main>
-        <article class="full-article">
-            <h2>AI Revolutionizes Healthcare Diagnosis</h2>
-            <p><em>By Jane Doe | July 14, 2025</em></p>
-            <img src="https://via.placeholder.com/800x400" alt="Article feature image">
-            <p>
-            Artificial Intelligence is significantly transforming the healthcare industry...
-            </p>
-            <p>
-            From cancer detection to personalized treatment plans, AI systems are proving their worth...
-            </p>
-        </article>
-        </main>
-    </div> -->
-
     <div class="layout-container">
-        <main class="article-main">
+        <main>
             <article class="single-article">
                 <span class="article-category">Politics</span>
                 <h1 class="article-title">Global Leaders Gather for Climate Summit</h1>
                 
-                <div class="article-meta">
+                <div class="article-data">
                     <span><i class="far fa-user"></i> By John Smith</span>
                     <span><i class="far fa-clock"></i> Published 3 hours ago</span>
                     <span><i class="far fa-comment"></i> 24 comments</span>
@@ -78,7 +62,7 @@
                 <img src="https://via.placeholder.com/800x450" alt="Climate Summit" class="article-featured-image">
 
                 <div class="article-content">
-                    <p class="article-lead">World leaders from over 100 countries convened in Paris today for the annual Global Climate Summit, with ambitious targets to reduce carbon emissions by 50% before 2030.</p>
+                    <p class="article-intro">World leaders from over 100 countries convened in Paris today for the annual Global Climate Summit, with ambitious targets to reduce carbon emissions by 50% before 2030.</p>
 
                     <p>The summit, hosted by French President Emmanuel Macron, brings together heads of state, environmental experts, and business leaders to address what many are calling the defining challenge of our generation.</p>
 
@@ -123,9 +107,9 @@
                         </div>
                     </div>
                     <div class="share-buttons">
-                        <button><i class="fab fa-facebook-f"></i> Share</button>
-                        <button><i class="fab fa-twitter"></i> Tweet</button>
-                        <button><i class="fab fa-linkedin-in"></i> Share</button>
+                        <button><i class="fa-brands fa-facebook-f"></i> Share</button>
+                        <button><i class="fa-brands fa-x-twitter"></i> Tweet</button>
+                        <button><i class="fa-brands fa-linkedin-in"></i> Share</button>
                     </div>
                 </div>
             </article>
@@ -191,8 +175,8 @@
                 <h4>John Smith</h4>
                 <p>Senior Political Correspondent with over 15 years experience covering international affairs and climate policy.</p>
                 <div class="author-social">
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
             </div>
 
