--- a/category.html
+++ b/category.html
@@ -47,7 +47,7 @@
     </header>
     
     <div class="layout-container">
-        <main class="category-main">
+        <main>
             <div class="category-header">
                 <h1>Politics</h1>
                 <p class="category-description">Latest developments in domestic and international political affairs, policy changes, and government initiatives.</p>
