Add styles for Article Page

--- a/article.html
+++ b/article.html
@@ -99,11 +99,11 @@
                     <div class="article-rating">
                         <span>Rate this article:</span>
                         <div class="stars">
-                            <i class="far fa-star"></i>
-                            <i class="far fa-star"></i>
-                            <i class="far fa-star"></i>
-                            <i class="far fa-star"></i>
-                            <i class="far fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
                         </div>
                     </div>
                     <div class="share-buttons">
